--- a/CodigoFonte/SSAPG_project_v0_0/.settings/com.vaadin.integration.eclipse.prefs
+++ b/CodigoFonte/SSAPG_project_v0_0/.settings/com.vaadin.integration.eclipse.prefs
@@ -1,3 +1,5 @@
 com.vaadin.integration.eclipse.useLatestNightly=false
+com.vaadin.integration.eclipse.widgetsetCompilationEta=103389
 com.vaadin.integration.eclipse.widgetsetDirty=false
+com.vaadin.integration.eclipse.widgetsetStyle=OBF
 eclipse.preferences.version=1
