--- a/CodigoFonte/SSAPG_project_v0_0/WebContent/WEB-INF/web.xml
+++ b/CodigoFonte/SSAPG_project_v0_0/WebContent/WEB-INF/web.xml
@@ -5,32 +5,28 @@
 		<description>
 		Vaadin production mode</description>
 		<param-name>productionMode</param-name>
-		<param-value>false</param-value>
+		<param-value>true</param-value>
 	</context-param>
 	<servlet>
-		<servlet-name>Ssapg_project_v0_0 Application</servlet-name>
-		<servlet-class>com.vaadin.terminal.gwt.server.ApplicationServlet</servlet-class>
-		<init-param>
-			<description>
-			Vaadin application class to start</description>
-			<param-name>application</param-name>
-			<param-value>br.com.ssapg_project_v0_0.Ssapg_project_v0_0Application</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Ssapg_project_v0_0 Application</servlet-name>
-		<url-pattern>/Ssapg_project_v0_0ApplicationServlet/*</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Ssapg_project_v0_0 Application</servlet-name>
-		<url-pattern>/VAADIN/*</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
+ 		<servlet-name>Ssapg_project_v0_0 Application</servlet-name>
+ 		<servlet-class>com.vaadin.terminal.gwt.server.ApplicationServlet</servlet-class>
+ 		<init-param>
+  <description>
+  Vaadin application class to start</description>
+  <param-name>application</param-name>
+  <param-value>br.com.ssapg_project_v0_0.Ssapg_project_v0_0Application</param-value>
+ </init-param>
+ 		<init-param>
+ 			<description>
+ 			Application widgetset</description>
+ 			<param-name>widgetset</param-name>
+ 			<param-value>br.com.ssapg_project_v0_0.widgetset.Ssapg_project_v0_0Widgetset</param-value>
+ 		</init-param>
+</servlet>
+
+<servlet-mapping>
+ 	<servlet-name>Ssapg_project_v0_0 Application</servlet-name>
+ 	<url-pattern>/*</url-pattern>
+</servlet-mapping>
+	
 </web-app>
